# deskpilot

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  deskpilot.example.toml  rust-toolchain.toml
.deskpilot-bootstrap/: part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07
.github/: final-fixes.b64  materialize.py
.github/workflows/: align-windows-sys.yml  apply-clippy-fixes.yml  apply-event-confirmed-spare-fix.yml  apply-explorer-spare-fix.yml  apply-final-fixes.yml  apply-final-reconciliation-fix.yml  apply-trailing-spare-fix.yml  apply-windows-sys-fixes.yml  bootstrap.yml  ci.yml  cleanup-after-merge.yml  compiler-repair.yml  document-all-files.yml  final-clippy-fixes.yml  final-scroll-isolation.yml  finalize-0.1.3.yml  finalize-0.1.4.yml  finalize-active-empty-fix.yml  finalize-deskpilot.yml  finalize-shell-hook-fix.yml  finalize-validated.yml  format-pr7.yml  (+14 more)
.remediation/: app-part-00  app-part-01  app-part-02  app-part-03  app-part-04  app-part-05  final-ci.yml  part-00  part-01
docs/: architecture.md  code-comments.md  commenting-scope.md  testing.md  troubleshooting.md  virtual-desktop-backend.md
resources/: deskpilot.manifest  deskpilot.rc
scripts/: build-portable.ps1  measure-resources.ps1  smoke-windows.ps1  verify-license.ps1
src/: app.rs  cli.rs  config.rs  diagnostics.rs  event.rs  ipc.rs  lib.rs  logging.rs  main.rs  support.rs  tray.rs  wheel.rs
tests/: cli.rs  config.rs  reconciliation.rs  spare_guard.rs  trailing_compaction.rs  virtual_reconciliation.rs  wheel.rs
tools/: apply_event_confirmed_spare_fix.py  apply_explorer_spare_fix.py  apply_final_fix.py  fix_final_integration.py  fix_hardening_materializer.py  harden_spare_confirmation.py
(+12 files in other folders)
