[package]
name = "deskpilot"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Portable Windows 11 virtual desktop manager"
license-file = "LICENSE.md"
repository = "https://github.com/krestosa/deskpilot"
build = "build.rs"

[[bin]]
name = "DeskPilot"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }
winvd = "=0.0.49"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_UI_Shell",
] }
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Pipes",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "3.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dev-dependencies]
tempfile = "3.20"
